--- a/src/assets/components/Cases/Case/Notes.scss
+++ b/src/assets/components/Cases/Case/Notes.scss
@@ -5,12 +5,25 @@
     display: grid;
     box-sizing: border-box;
     gap: 25px;
-    &-title{
+    &-title {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        img{
-            cursor: pointer;
+        &-panel {
+            font-size: 24px;
+            width: max-content;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 0px 10px;
+
+            &:hover {
+                background-color: #fff;
+                border-radius: 15px;
+                cursor: pointer;
+            }
+
         }
     }
     &-modal{
@@ -68,4 +81,12 @@
         }
     }
 
+}
+@media screen and (max-width:500px){
+    .Notes{
+        padding: 10px 0px;
+    }
+    .Notes-title-panel{
+            font-size: 16px;
+    }
 }
