--- a/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
+++ b/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
@@ -33,7 +33,7 @@
         }
         &-title{
             font-weight: bold;
-            font-size: 20px;
+            font-size: 26px;
             padding: 10px;
         }
     }
@@ -84,6 +84,11 @@
         }
     }
     .InputBlock {
+        &-pib{
+            display: flex;
+            gap: 25px;
+            padding: 15px 0px;
+        }
         &-default {
             display: flex;
             gap: 5px;
@@ -125,5 +130,12 @@
     .CaseInfoBlock{
         grid-template-columns: none;
         grid-template-rows: max-content max-content;
+        .InputBlock{
+            &-pib{
+                display: grid;
+                grid-template-columns: 1fr;
+                }
+        }
     }
+
 }
