--- a/src/assets/components/Cases/Case/Info/DetailedInfo.scss
+++ b/src/assets/components/Cases/Case/Info/DetailedInfo.scss
@@ -1,18 +1,25 @@
 .DetailedInfo{
     display: grid;
-    grid-template-rows: 50px calc(100% - 100px) 50px;
     background-color: #E9F4FE;
     padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
     gap: 25px;
     &-title{
+        font-size: 24px;
+        width: max-content;
         font-weight: 600;
         display: flex;
-        justify-content: space-between;
         align-items: center;
-       
+        gap: 10px;
+        padding: 0px 10px;
+        &:hover{
+            background-color: #fff;
+            border-radius: 15px;
+            cursor: pointer;
+        }
     }
+
     &-InfoBlock{
         border-radius: 10px;
         background-color: #fff;
@@ -42,4 +49,12 @@
     gap: 25px;
     max-height: 400px;
     overflow-y: scroll;
+}
+@media screen and (max-width:500px){
+    .DetailedInfo{
+        padding: 10px 0px;
+        &-title{
+            font-size: 16px;
+        }
+    }
 }
