--- a/src/assets/components/Cases/Case/Plan.scss
+++ b/src/assets/components/Cases/Case/Plan.scss
@@ -5,20 +5,34 @@
     border-radius: 10px;
     box-sizing: border-box;
     gap: 25px;
+
     &-title {
-        font-weight: 600;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        img{
-            cursor: pointer;
+        &-panel {
+            font-size: 24px;
+            width: max-content;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 0px 10px;
+
+            &:hover {
+                background-color: #fff;
+                border-radius: 15px;
+                cursor: pointer;
+            }
         }
     }
+
     .content {
         overflow-y: auto;
         max-height: 400px;
 
     }
+
     &-content {
         display: flex;
         flex-direction: column;
@@ -29,16 +43,18 @@
             background-color: #fff;
             border: solid 3px $second-color;
             padding: 15px;
+
             .str {
                 display: flex;
                 flex-direction: column;
                 gap: 15px;
             }
+
             .str-date {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                
+
                 .dates {
                     &-start {
                         display: flex;
@@ -46,6 +62,7 @@
                         gap: 25px;
                     }
                 }
+
                 .controls {
                     img {
                         width: 20px;
@@ -53,26 +70,31 @@
                     }
                 }
             }
+
             .bottom {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                &-date{
+
+                &-date {
                     color: #bababa;
                 }
             }
         }
     }
+
     &-create {
         display: flex;
         flex-direction: column;
         gap: 8px;
+
         &-date {
             display: flex;
             align-items: center;
             justify-content: space-between;
             gap: 8px;
         }
+
         &-status {
             display: flex;
             align-items: center;
@@ -80,10 +102,25 @@
             gap: 24px;
         }
     }
+
     &-bottom {
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 24px;
+    }
+}
+@media screen and (max-width:720px){
+    .dates-start{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:500px){
+    .Plan{
+        padding: 10px 0px;
+
+    }
+    .Plan-title-panel{
+            font-size: 16px;
     }
 }
