--- a/src/assets/components/Cases/Case/Case.scss
+++ b/src/assets/components/Cases/Case/Case.scss
@@ -137,7 +137,14 @@
         cursor: pointer;
     }
 }
-
+.uploader_wrap{
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: bold;
+}
 @media (max-width: 600px) {
     .container__grid__two {
         grid-template-columns: 1fr;
