--- a/src/assets/elements/Uploaders/FilesUploader.scss
+++ b/src/assets/elements/Uploaders/FilesUploader.scss
@@ -19,6 +19,8 @@
         gap: 10px;
         max-height: 100px;
         overflow-y: scroll;
+        font-weight: normal;
+        font-size: 16px;
         div {
             display: flex;
             gap: 20px;
@@ -48,5 +50,11 @@
             height: max-content;
             cursor: pointer;
         }
+    }
+}
+@media screen and (max-width:720px){
+    .FilesUploader{
+        flex-direction: column;
+        align-items: center;
     }
 }
