group page, photoUploader rework

--- a/src/assets/components/Groups/index.scss
+++ b/src/assets/components/Groups/index.scss
@@ -1,3 +1,5 @@
 @import './AddGroup.scss';
 @import './Groups.scss';
-@import './GroupConnections.scss'
+@import './GroupConnections.scss';
+@import './Group/Group.scss';
+@import './Group/SettingsModal.scss';
