--- a/src/assets/components/Cases/Add-case/Add-case.scss
+++ b/src/assets/components/Cases/Add-case/Add-case.scss
@@ -35,6 +35,9 @@
                     width: 100%;
                 }
             }
+            >div>div{
+                width: 100%;
+            }
         }
         &-line-two{
             display: grid;
