case sex, show age

--- a/src/assets/components/Groups/Groups.scss
+++ b/src/assets/components/Groups/Groups.scss
@@ -26,6 +26,7 @@
     background-color: $background-color;
     &-split{
         font-weight: bold;
+        font-size: 18px;
         width: 100%;
         display: flex;
         justify-content: space-between;
