Front change case info

--- a/src/assets/blocks/blocks.scss
+++ b/src/assets/blocks/blocks.scss
@@ -1,3 +1,4 @@
 @import './access/AccessBlockCase.scss';
 @import './access/AccessDefaultBlock.scss';
-@import './AddEventBlock.scss'
+@import './AddEventBlock.scss';
+@import './InputBlock.scss';
