--- a/src/assets/components/Cases/Case/Info/CaseProfilePhoto.scss
+++ b/src/assets/components/Cases/Case/Info/CaseProfilePhoto.scss
@@ -2,5 +2,12 @@
     background-size: 100%;
     &-img {
         width: 100%;
+        max-width: 250px;
+        min-width: 250px;
+    }
+    img {
+        width: 100%;
+        max-width: 250px;
+        min-width: 250px;
     }
 }
