--- a/src/assets/components/Cases/Case/Info/Info.scss
+++ b/src/assets/components/Cases/Case/Info/Info.scss
@@ -1,4 +1,5 @@
 @import "./CaseShortInfo.scss";
 @import './CaseProfilePhoto.scss';
 @import './CaseInfoBlock.scss';
-@import './DetailedInfo.scss'
+@import './DetailedInfo.scss';
+@import "./PersonalInfo.scss";
