--- a/src/assets/components/Cases/Case/Case.scss
+++ b/src/assets/components/Cases/Case/Case.scss
@@ -110,9 +110,9 @@
     margin-top: 50px;
 }
 
-.container__grid__two {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+.info__column {
+    display: flex;
+    flex-direction: column;
     gap: 50px;
     margin-top: 50px;
 }
@@ -146,9 +146,6 @@
     font-weight: bold;
 }
 @media (max-width: 600px) {
-    .container__grid__two {
-        grid-template-columns: 1fr;
-    }
 
     .connections__wrap {
         grid-template-columns: 1fr;
