--- a/src/assets/components/Cases/Cases.scss
+++ b/src/assets/components/Cases/Cases.scss
@@ -6,4 +6,5 @@
 @import "./Case/GiveHelp.scss";
 @import "./Case/Notes.scss";
 @import "./Case/Help.scss";
-@import "./Case/Settings.scss"
+@import "./Case/Settings.scss";
+@import "./Case/Files.scss";
