--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -6,3 +6,4 @@
 @import './Inputs/Input.scss';
 @import './Uploaders/PhotoUploader.scss';
 @import './Selects/SelectAccess.scss';
+@import "./TextEditor/TextEditor.scss";
