--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -5,32 +5,31 @@
     flex-direction: column;
     gap: 50px;
     margin: auto;
+    position: relative;
 
     &-header {
         display: flex;
         align-items: center;
         flex-direction: column;
         gap: 5px;
+
         &-title {
             font-size: 32px;
             font-weight: bold;
             display: flex;
             gap: 10px;
             align-items: center;
+            position: relative;
 
             .edit-icon {
                 opacity: 0;
                 cursor: pointer;
+                transition: opacity 0.3s;
             }
-        }
 
-        :hover {
-            background-color: $background-color;
-
-            .edit-icon {
+            &:hover .edit-icon {
                 opacity: 1;
             }
-
         }
     }
 
@@ -39,7 +38,7 @@
         display: flex;
         justify-content: center;
 
-        >div {
+        > div {
             width: 100%;
         }
     }
@@ -49,28 +48,29 @@
         border: solid 3px $main-color;
         border-radius: 15px;
         padding: 15px;
+        display: flex;
+        gap: 75px;
 
-        &-column{
+        &-column {
             display: flex;
             flex-direction: column;
             gap: 15px;
-            
+
             &-row {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-
-            &-text {
                 display: flex;
-                flex-direction: column;
-                gap: 5px;
+                align-items: center;
+                gap: 10px;
 
-                >span {
-                    font-weight: bold;
+                &-text {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+
+                    > span {
+                        font-weight: bold;
+                    }
                 }
             }
         }
-        }
-        
     }
 }
