--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -50,27 +50,17 @@
         padding: 15px;
         display: flex;
         gap: 75px;
+        word-wrap: break-word;
 
         &-column {
             display: flex;
             flex-direction: column;
             gap: 15px;
 
-            &-row {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-
-                &-text {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 5px;
-
-                    > span {
-                        font-weight: bold;
-                    }
-                }
-            }
         }
+    }
+    &-text{
+        max-width: 100%;
+        word-wrap: break-word;
     }
 }
