mobile version update, edit file text, PhotoUploader fix

--- a/src/assets/blocks/ProfilePhotoBlock.scss
+++ b/src/assets/blocks/ProfilePhotoBlock.scss
@@ -1,5 +1,5 @@
-.CaseProfilePhoto {
-    background-size: 100%;
+.ProfilePhotoBlock {
+    background-size:100%;
     position: relative;
     &-hover{
         width: 100%;
