--- a/src/assets/blocks/blocks.scss
+++ b/src/assets/blocks/blocks.scss
@@ -1,4 +1,5 @@
 @import './access/AccessBlockCase.scss';
 @import './access/AccessDefaultBlock.scss';
 @import './AddEventBlock.scss';
+@import './ProfilePhotoBlock.scss';
 @import './InputBlock.scss';
