--- a/src/assets/components/Groups/Group/Group.scss
+++ b/src/assets/components/Groups/Group/Group.scss
@@ -99,3 +99,11 @@
         }
     }
 }
+@media screen and (max-width:720px){
+    .Group{
+        width: 100%;
+        &-info{
+            grid-template-columns: 1fr;
+        }
+    }
+}
