--- a/src/assets/components/Cases/Case/Files.scss
+++ b/src/assets/components/Cases/Case/Files.scss
@@ -7,6 +7,7 @@
     gap: 25px;
 
     &-file {
+        text-align: center;
         display: flex;
         gap: 10px;
         align-items: center;
@@ -54,7 +55,6 @@
         max-height: 400px;
         overflow-y: scroll;
         display: grid;
-        grid-template-columns: repeat(5,1fr);
         gap: 25px;
     }
 }
