--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -56,11 +56,24 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
-
+            word-break: break-all;
+            hyphens: auto;
+        }
+    }
+    &-editor{
+         >span{
+            position: absolute;
+            top: 10px;
+            right: 15px;
         }
     }
     &-text{
         max-width: 100%;
         word-wrap: break-word;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+       
     }
 }
