--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -38,7 +38,7 @@
         display: flex;
         justify-content: center;
 
-        > div {
+        >div {
             width: 100%;
         }
     }
@@ -60,20 +60,26 @@
             hyphens: auto;
         }
     }
-    &-editor{
-         >span{
+
+    &-editor {
+        >span {
             position: absolute;
             top: 10px;
             right: 15px;
         }
     }
-    &-text{
+
+    &-text {
         max-width: 100%;
         word-wrap: break-word;
         position: relative;
         display: flex;
         flex-direction: column;
         gap: 15px;
-       
+
+        >div {
+            max-height: 400px;
+            overflow-y: scroll;
+        }
     }
 }
