New settings design

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -5,3 +5,4 @@
 @import "./defaultClasses.scss";
 @import "./components//components.scss";
 @import "./modals/modals.scss";
+@import "./api/api.scss";
