--- a/src/components/Settings/SetEvent/SetEvent.module.css
+++ b/src/components/Settings/SetEvent/SetEvent.module.css
@@ -21,6 +21,8 @@
     grid-template-columns: 1fr 1fr;
     gap: 15px;
     margin-top: 20px;
+    max-height: 400px;
+    overflow-y: scroll;
 }
 .res__color{
     width: 100%;
