--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -7,3 +7,4 @@
 @import './Uploaders/PhotoUploader.scss';
 @import './Selects/SelectAccess.scss';
 @import "./TextEditor/TextEditor.scss";
+@import "./Accordions/accordions.scss";
