sort cases fix,  case mobile fix, group right fix

--- a/src/assets/components/Cases/Case/Fields.scss
+++ b/src/assets/components/Cases/Case/Fields.scss
@@ -58,11 +58,19 @@
 
 @media screen and (max-width:500px){
     .Fields{
+        &-InfoBlock{
+            &-title{
+                flex-direction: column;
+            }
+        }
         &-title{
+            flex-direction: column;
             &-panel{
-
+                max-width: 100%;
                 font-size: 14px;
                 word-wrap: break-word;
+                word-break: break-all;
+                flex-direction: column;
             }
         }
     }
