--- a/src/assets/components/Cases/Case/Notes.scss
+++ b/src/assets/components/Cases/Case/Notes.scss
@@ -83,6 +83,9 @@
 
 }
 @media screen and (max-width:500px){
+    .Notes-title{
+        flex-direction: column;
+    }
     .Notes-title-panel{
             font-size: 16px;
     }
