--- a/src/assets/components/Cases/Case/Info/DetailedInfo.scss
+++ b/src/assets/components/Cases/Case/Info/DetailedInfo.scss
@@ -59,6 +59,9 @@
     .DetailedInfo{
         &-title{
             font-size: 16px;
+            &-panel{
+                flex-direction: column;
+            }
         }
     }
 }
