--- a/src/assets/components/Cases/Case/Plan.scss
+++ b/src/assets/components/Cases/Case/Plan.scss
@@ -116,6 +116,9 @@
     }
 }
 @media screen and (max-width:500px){
+    .Plan-title{
+        flex-direction: column;
+    }
     .Plan-title-panel{
             font-size: 16px;
     }
