--- a/src/assets/components/Groups/Groups.scss
+++ b/src/assets/components/Groups/Groups.scss
@@ -22,8 +22,15 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 15px;
     background-color: $background-color;
+    word-break: break-all;
+    &-inner{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
     &-split{
         font-weight: bold;
         font-size: 18px;
