--- a/src/assets/components/gallery/OpenPhoto.scss
+++ b/src/assets/components/gallery/OpenPhoto.scss
@@ -1,8 +1,6 @@
 .OpenPhoto {
-    width: 80vw;
-    height: 70vh;
     &-img {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: 80vw;
+        max-height: 70vh;
     }
 }
