--- a/src/components/Events/Event/get-user.module.css
+++ b/src/components/Events/Event/get-user.module.css
@@ -35,9 +35,14 @@
     .result{
         flex-direction: column;
         align-items: center;
-        gap: 3px;
+        gap: 0;
     }
     .inner{
+        gap: 10px;
+    }
+    .result__left{
+        flex-direction: column;
         gap: 0;
+        align-items: center;
     }
 }
