--- a/src/components/Events/Event/plan.module.css
+++ b/src/components/Events/Event/plan.module.css
@@ -5,6 +5,7 @@
     margin-top: 30px;
 }
 .plan__header{
+    width: 100%;
     background-color: var(--main-color);
     border-radius: 7px;
     padding: 10px 0px;
@@ -41,6 +42,7 @@
 .result, .result__modal{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
     border-radius: 10px;
     position: relative;
@@ -50,6 +52,8 @@
     
 }
 .result__inner{
+    width: 100%;
+    height: 100%;
     max-height: 300px;
     overflow-y: scroll;
     display: flex;
@@ -60,11 +64,9 @@
     width: 90%;
 }
 .btn__feed{
+    width: max-content;
+    margin: auto;
     bottom: 12.5px;
-}
-.btn__feed:hover{
-    background-color: var(--main-color);
-    color: #fff;
 }
 .modal__wrap{
     position: fixed;
