fix visual bugs in events and groups, length alerts

--- a/src/assets/components/Groups/Group/Group.scss
+++ b/src/assets/components/Groups/Group/Group.scss
@@ -19,9 +19,11 @@
         align-items: center;
         flex-direction: column;
         padding-bottom: 5px;
+        word-break: break-all;
         &-desc {
             font-size: 16px;
             font-weight: normal;
+            word-break: break-all;
         }
     }
 
