--- a/src/assets/blocks/InputBlock.scss
+++ b/src/assets/blocks/InputBlock.scss
@@ -40,6 +40,10 @@
         }
     }
 }
+.header{
+    font-size: 35px;
+    font-weight: bold;
+}
 @media screen  and (max-width:720px){
 
     .InputBlock{
