--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -8,3 +8,4 @@
 @import './Selects/SelectAccess.scss';
 @import "./TextEditor/TextEditor.scss";
 @import "./Accordions/accordions.scss";
+@import "./Hints/hints.scss"
