--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -48,6 +48,17 @@ color: $main-color;
 .black-icon{
     color: #2b2b2b;
 }
+.hint-icon{
+    border-radius: 50%;
+    background-color: #2b2b2b;
+    color: #bababa;
+    font-size: 8px;
+    transform: scale(0.5);
+    cursor: pointer;
+    :hover{
+        background-color: #2b2b2b;
+    }
+}
 .video{
     height: 100%;
     width: 100%;
