--- a/src/components/Resources/Resources.module.css
+++ b/src/components/Resources/Resources.module.css
@@ -147,6 +147,8 @@
     justify-content: center;
 }
 .modal__file__inner{
+    word-break: break-all;
+    word-wrap: break-word;
     padding: 20px;
     background-color: #fff;
     border-radius: 20px;
@@ -193,6 +195,10 @@ font-weight: bold;
 }
 .titleH2{
     font-size: 14px;
+}
+.file__card{
+    word-break: break-all;
+    word-wrap: break-word;
 }
 @media  screen and (max-width:720px) {
     .wrap__cards__list{
