--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -6,7 +6,15 @@
     gap: 50px;
     margin: auto;
     position: relative;
-
+    &-tag{
+        background-color: $main-color;
+        border-radius: 25px;
+        font-weight: bold;
+        padding: 5px 7.5px;
+        display: flex;
+        align-items: center;
+        gap: 7.5px;
+    }
     &-header {
         display: flex;
         align-items: center;
@@ -58,6 +66,10 @@
             gap: 15px;
             word-break: break-all;
             hyphens: auto;
+        }
+        &-tags{
+            display: flex;
+            gap: 15px;
         }
     }
 
