--- a/src/components/Events/Event/event.module.css
+++ b/src/components/Events/Event/event.module.css
@@ -34,6 +34,11 @@
     flex-direction: column;
     gap: 10px;
 }
+.members__title{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
 .members__inner{
     display: grid;
     grid-template-columns: 1fr 1fr;
