--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,42 +1,86 @@
 footer{
     margin-top: 50px;
-    background-color: #323232;
+    background-color: #2a334c;
 }
 .footer{
-    padding: 30px 0;
+    padding-top: 75px;
     color: #fff;
     text-align: center;
     width: 75%;
     margin: auto;
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 75px;
 }
 .footer__top{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.footer__top__line{
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+.footer__top__logo{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-weight: bold;
+    font-size: 35px;
+    white-space: nowrap;
+    padding-bottom: 10px;
+}
+.footer__top__logo a img{
+    min-height: 100px;
+}
+.footer__top__column{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: left;
+}
+
+.footer__gray{
+    color: #61677a;
+    padding: 50px 0px;
 }
 .footer__bottom{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-.footer__bottom >p, .footer__bottom a{
-    color: #ffffff77 !important;
-    font-size: 12px;
-}
 .footer a{
     color: #fff;
     text-decoration: underline;
 }
-@media screen and (max-width:720px){
-    .footer__top__line{
+.footer__copyright{
+    padding: 15px 0px;
+    border-top: solid 1.5px #61677a;
+    color: #61677a;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__copyright__text > a{
+    color: #61677a;
+    font-weight: lighter;
+}
+.footer__socials{
+    display: flex;
+    gap: 50px;
+}
+.footer__socials a img{
+    cursor: pointer;
+    min-width: 25px;
+    min-height: 25px;
+}
+@media screen and (max-width:800px){
+    .footer__top{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:520px){
+    .footer__copyright{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .footer__top__logo{
         flex-direction: column;
     }
 }
