--- a/src/components/Header/Menu/bell.module.css
+++ b/src/components/Header/Menu/bell.module.css
@@ -12,26 +12,39 @@
     width: 0;
 }
 .items{
+    padding: 30px 0px;
     background-color: #fff;
     height: 100%;
-    float: right;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 15px;
     overflow-y: scroll;
-    grid-template-columns: 1fr;
-    border-left: solid 3px var(--main-color);
-    position: relative;
+    border-left: solid 3px var(--second-color);
 }
 .item{
+    width: 80%;
     padding: 15px 30px;
     cursor: pointer;
     transition: all .5s;
     background-color: var(--second-color);
-    border-bottom: solid 3px var(--main-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 15px;
+}
+.item__icon{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.item__icon > img{
+    max-width: 25px;
+    max-height: 25px;
 }
 .item:hover{
     background-color: var(--background-color);
@@ -93,9 +106,10 @@
 .link__item{
     color: #000;
     font-weight: 400;
+    word-break: break-all;
 }
 .item__read{
-    background-color: #eeecf1;
+    background-color: var(--background-color);
 }
 @keyframes active {
     from{
