--- a/src/assets/pages/EventsPage.scss
+++ b/src/assets/pages/EventsPage.scss
@@ -39,3 +39,13 @@
         }
     }
 }
+@media screen and (max-width:720px){
+    .EventsPage-events{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width:520px){
+    .EventsPage-events{
+        grid-template-columns: 1fr;
+    }
+}
