--- a/src/assets/pages/EventsPage.scss
+++ b/src/assets/pages/EventsPage.scss
@@ -31,11 +31,16 @@
         }
         &-color{
             width: 100%;
-            height: 10px;
+            height: 7.5px;
             border-radius: 15px;
         }
-        &-date{
-            color: #bababa;
+        &-split{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            &-date{
+                color: #bababa;
+            }
         }
     }
 }
