--- a/src/assets/pages/pages.scss
+++ b/src/assets/pages/pages.scss
@@ -4,4 +4,5 @@
 @import "./File.scss";
 @import "./UpdateLog.scss";
 @import "./EventsPage.scss";
-@import "./EventPage/index.scss"
+@import "./EventPage/index.scss";
+@import "./NotFound.scss"
