event page plans

--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -5,3 +5,4 @@
 @import "./Resources/Resources.scss";
 @import "./Contacts/ContactForm.scss";
 @import './Groups/index.scss';
+@import "./Events/events.scss"
