--- a/src/assets/components/Events/EventPlan.scss
+++ b/src/assets/components/Events/EventPlan.scss
@@ -19,6 +19,11 @@
             align-items: center;
             justify-content: space-between;
             word-break: break-all;
+            &-left{
+                display: flex;
+                align-items: center;
+                gap: 7.5px;
+            }
         }
     }
 
