--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -8,4 +8,5 @@
 @import './Selects/SelectAccess.scss';
 @import "./TextEditor/TextEditor.scss";
 @import "./Accordions/accordions.scss";
-@import "./Hints/hints.scss"
+@import "./Hints/hints.scss";
+@import "./Tables/tables.scss";
