new notifications, visual fixes

--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -73,3 +73,7 @@ color: $main-color;
 .fs35{
     font-size: 35px !important;
 }
+.notification-icon{
+    color: #fff;
+    font-size: 22px !important;
+}
