--- a/src/assets/components/Events/EventPlan.scss
+++ b/src/assets/components/Events/EventPlan.scss
@@ -33,12 +33,16 @@
         flex-direction: column;
         justify-content: space-between;
         word-break: break-all;
-
+        &-feedbacks{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
         &-text {
             display: flex;
             flex-direction: column;
             max-height: 150px;
-            overflow-y: scroll;
+            overflow-y: auto;
             gap: 15px;
 
             &-item {
