--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -2,7 +2,7 @@
     border-collapse: collapse;
     width: 100%;
     max-height: 450px;
-    overflow: scroll;
+    overflow: auto;
     text-align: center;
     thead{
         background-color: $main-color;
