--- a/src/assets/elements/Notifications/MenuNotification.scss
+++ b/src/assets/elements/Notifications/MenuNotification.scss
@@ -1,13 +1,14 @@
 .MenuNotification{
     width: 90%;
     padding: 10px;
-    background-color: $background-color;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
+
     &-header{
+        font-size: 16px;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -30,7 +31,8 @@
         width: 85%;
         display: flex;
         flex-direction: column;
-        gap: 7.5px;
+        gap: 2.5px;
+        font-size: 14px;
         &-date{
             font-size: 12px;
             color: #bababa;
@@ -50,6 +52,7 @@
     &-button{
         padding: 5px 7.5px;
         border-radius: 5px;
+        font-size: 12px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -59,10 +62,12 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            color: #fff;
+            a{
+                color: #fff;
+            }
         }
     }
     &-read{
-        opacity: 0.77;
+        opacity: 0.6;
     }
 }
