FIX Notifications and added new theme variables
Important new logic to using theme variables

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -3,3 +3,8 @@ $second-color:#90CAF9;
 $background-color:#E9F4FE;
 $table-color-one: #eee7f5;
 $table-color-two: #eee3f8;
+
+$light-theme-color-white000--o: #FFFFFFFF;
+$light-theme-color-blue000--o: #42A5F5FF;
+$light-theme-color-orange000--o: #f4a718FF;
+$light-theme-color-orange800--o: #f5b94bFF;
