--- a/src/assets/elements/Notifications/MenuNotification.scss
+++ b/src/assets/elements/Notifications/MenuNotification.scss
@@ -6,9 +6,11 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-
+    &.case-created {
+        background-color: $notification--default-case-created-fill;
+    }
     &-header{
-        font-size: 16px;
+        font-size: 14px;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -20,7 +22,7 @@
             gap: 7.5px;
         }
         &-unread{
-            font-size: 14px;
+            font-size: 12px;
             background-color: #f0eded;
             box-shadow: 0px 0px 1px 0px #f0eded;
             padding: 2.5px 5px;
@@ -32,9 +34,9 @@
         display: flex;
         flex-direction: column;
         gap: 2.5px;
-        font-size: 14px;
+        font-size: 12px;
         &-date{
-            font-size: 12px;
+            font-size: 10px;
             color: #bababa;
         }
         &-options{
@@ -52,7 +54,7 @@
     &-button{
         padding: 5px 7.5px;
         border-radius: 5px;
-        font-size: 12px;
+        font-size: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -65,9 +67,14 @@
             a{
                 color: #fff;
             }
+            svg {
+                font-size: 10px!important;
+            }
         }
     }
     &-read{
-        opacity: 0.6;
+        &.case-created {
+            background-color: $notification--marked-case-created-fill;
+        }
     }
 }
