--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./theme/ThemeVariables.scss";
 @import "./pages/pages.scss";
 @import "./blocks/blocks.scss";
 @import "./elements//elements.scss";
@@ -6,3 +7,4 @@
 @import "./components//components.scss";
 @import "./modals/modals.scss";
 @import "./api/api.scss";
+
