--- a/src/components/Header/Menu/bell.module.css
+++ b/src/components/Header/Menu/bell.module.css
@@ -5,7 +5,7 @@
     top: 60px;
     left: 0;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: calc(100% - 500px) 500px;
 }
 .black{
     transition: all .3s;
@@ -36,6 +36,7 @@
     padding: 5px 10px;
     background-color: #F99C9C;
     border-radius: 5px;
+    font-size: 10px;
 }
 .item{
     width: 80%;
