new  themes + file fix

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -5,6 +5,11 @@ $table-color-one: #eee7f5;
 $table-color-two: #eee3f8;
 
 $light-theme-color-white000--o: #FFFFFFFF;
-$light-theme-color-blue000--o: #42A5F5FF;
-$light-theme-color-orange000--o: #f4a718FF;
-$light-theme-color-orange800--o: #f5b94bFF;
+$light-theme-color-blue000--o: #D2EBFFFF;
+$light-theme-color-blue800--o: #D2EBFF66;
+$light-theme-color-orange000--o: #FFE55F;
+$light-theme-color-orange800--o: #FFE55F66;
+$light-theme-color-purple000--o:#F2BEFF;
+$light-theme-color-purple800--o:#F2BEFF66;
+$light-theme-color-red000--o:#be7373;
+$light-theme-color-red800--o:#be737366;
