--- a/src/assets/components/Events/EventPlans.scss
+++ b/src/assets/components/Events/EventPlans.scss
@@ -19,3 +19,13 @@
         }
 
 }
+@media screen and (max-width:720px){
+    .EventPlans-inner{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width:500px){
+    .EventPlans-inner{
+        grid-template-columns: 1fr;
+    }
+}
