--- a/src/assets/pages/pages.scss
+++ b/src/assets/pages/pages.scss
@@ -5,4 +5,5 @@
 @import "./UpdateLog.scss";
 @import "./EventsPage.scss";
 @import "./EventPage/index.scss";
-@import "./NotFound.scss"
+@import "./NotFound.scss";
+@import "./LoginPage.scss";
